[gd_scene load_steps=27 format=3 uid="uid://b215hr3wjtjj2"]

[ext_resource type="Script" path="res://imports/lifeform_animal.gd" id="1_lovpc"]
[ext_resource type="Texture2D" uid="uid://bh3kruda7jagj" path="res://assets/lifeforms/outline/MiniDeer2.png" id="3_ee6t0"]
[ext_resource type="AnimationLibrary" uid="uid://qr4hkr5vsu6l" path="res://imports/animations/stag_animation_library.tres" id="4_wgesw"]
[ext_resource type="Script" path="res://imports/components/draggable.gd" id="5_gk2nj"]
[ext_resource type="Script" path="res://imports/components/movement.gd" id="6_2e0su"]
[ext_resource type="PackedScene" uid="uid://bcwkugn6v3oy7" path="res://addons/godot_state_charts/utilities/state_chart_debugger.tscn" id="7_pu8pp"]
[ext_resource type="Texture2D" uid="uid://bwmrywg6b78xc" path="res://imports/Generic Status Icons.png" id="9_7lkud"]
[ext_resource type="Texture2D" uid="uid://ddidvo4s4pjl" path="res://imports/Egg item.png" id="10_v4dy4"]
[ext_resource type="Script" path="res://addons/godot_state_charts/state_chart.gd" id="11_yli5i"]
[ext_resource type="Script" path="res://addons/godot_state_charts/parallel_state.gd" id="12_a6wk7"]
[ext_resource type="Script" path="res://addons/godot_state_charts/compound_state.gd" id="13_wg3vd"]
[ext_resource type="Script" path="res://addons/godot_state_charts/transition.gd" id="14_bt12d"]
[ext_resource type="Script" path="res://addons/godot_state_charts/animation_player_state.gd" id="15_tk1nx"]
[ext_resource type="Resource" uid="uid://brea607hp7eq3" path="res://imports/StateConditions/is_moving.tres" id="16_wri75"]
[ext_resource type="Script" path="res://addons/godot_state_charts/not_guard.gd" id="17_sw1ol"]
[ext_resource type="Script" path="res://addons/godot_state_charts/atomic_state.gd" id="18_p0wjb"]
[ext_resource type="Resource" uid="uid://c2d1qwbetpa35" path="res://imports/StateConditions/is_safe.tres" id="19_u70r5"]
[ext_resource type="Script" path="res://addons/godot_state_charts/history_state.gd" id="20_x62iw"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_pqhh5"]
radius = 8.0
height = 16.0

[sub_resource type="CircleShape2D" id="CircleShape2D_h0cfi"]
radius = 55.2268

[sub_resource type="NavigationPolygon" id="NavigationPolygon_vy1fw"]
vertices = PackedVector2Array(-88, -80, 136, -80, 136, 96, -88, 96)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2, 3)])
outlines = Array[PackedVector2Array]([PackedVector2Array(-88, -80, 136, -80, 136, 96, -88, 96)])
source_geometry_group_name = &"navigation_polygon_source_group"

[sub_resource type="LabelSettings" id="LabelSettings_sif72"]
font_size = 7
font_color = Color(0.658824, 0.619608, 0.909804, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_v2t43"]
atlas = ExtResource("9_7lkud")
region = Rect2(64, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_q6yiv"]
atlas = ExtResource("9_7lkud")
region = Rect2(192, 96, 32, 32)

[sub_resource type="Resource" id="Resource_83iit"]
script = ExtResource("17_sw1ol")
guard = ExtResource("16_wri75")

[sub_resource type="Resource" id="Resource_u87sq"]
script = ExtResource("17_sw1ol")
guard = ExtResource("19_u70r5")

[node name="Animal" type="CharacterBody2D"]
y_sort_enabled = true
collision_layer = 4
collision_mask = 3
motion_mode = 1
script = ExtResource("1_lovpc")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -16)
texture = ExtResource("3_ee6t0")
hframes = 7
vframes = 7
frame = 42

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Sprite2D")
libraries = {
"stag_animation_library": ExtResource("4_wgesw")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -8)
shape = SubResource("CapsuleShape2D_pqhh5")
script = ExtResource("5_gk2nj")

[node name="SensoryRadius" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="SensoryRadius"]
position = Vector2(0, -8)
shape = SubResource("CircleShape2D_h0cfi")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
path_desired_distance = 10.0
target_desired_distance = 5.0
path_max_distance = 200.0
radius = 20.0
debug_use_custom = true
debug_path_custom_color = Color(0.0235294, 1, 1, 0.792157)
debug_path_custom_point_size = 1.0

[node name="Movement" type="Node2D" parent="." node_paths=PackedStringArray("pawn", "nav", "state_machine")]
visible = false
script = ExtResource("6_2e0su")
pawn = NodePath("..")
nav = NodePath("../NavigationAgent2D")
state_machine = NodePath("../StateChart")

[node name="NavigationRegion2D" type="NavigationRegion2D" parent="."]
visible = false
navigation_polygon = SubResource("NavigationPolygon_vy1fw")
enabled = false

[node name="StateChartDebugger" parent="." instance=ExtResource("7_pu8pp")]
visible = false
top_level = true
offset_left = 304.0
offset_top = 136.0
offset_right = 156.0
offset_bottom = 218.0
scale = Vector2(0.500511, 0.500511)
initial_node_to_watch = NodePath("../StateChart")

[node name="DebugLabel" type="Label" parent="."]
offset_left = -20.0
offset_top = -43.0
offset_right = 20.0
offset_bottom = -20.0
label_settings = SubResource("LabelSettings_sif72")
horizontal_alignment = 1
vertical_alignment = 1

[node name="StatusBar" type="HBoxContainer" parent="."]
offset_left = -4.0
offset_top = -20.0
offset_right = 64.0
offset_bottom = 12.0
scale = Vector2(0.15, 0.15)
alignment = 1

[node name="Dying" type="TextureRect" parent="StatusBar"]
visible = false
layout_mode = 2
texture = SubResource("AtlasTexture_v2t43")

[node name="Hunting" type="TextureRect" parent="StatusBar"]
visible = false
layout_mode = 2
texture = SubResource("AtlasTexture_q6yiv")

[node name="Highlight" type="Sprite2D" parent="."]
position = Vector2(0, -24)
scale = Vector2(0.25, 0.25)
texture = ExtResource("10_v4dy4")

[node name="StateChart" type="Node" parent="."]
script = ExtResource("11_yli5i")

[node name="ParallelState" type="Node" parent="StateChart"]
script = ExtResource("12_a6wk7")

[node name="Animation" type="Node" parent="StateChart/ParallelState"]
script = ExtResource("13_wg3vd")
initial_state = NodePath("IdleAnim")

[node name="ToDeath" type="Node" parent="StateChart/ParallelState/Animation"]
script = ExtResource("14_bt12d")
to = NodePath("../DeathAnim")
event = &"death"

[node name="ToAttack" type="Node" parent="StateChart/ParallelState/Animation"]
script = ExtResource("14_bt12d")
to = NodePath("../AttackAnim")
event = &"eat_anim"

[node name="IdleAnim" type="Node" parent="StateChart/ParallelState/Animation"]
script = ExtResource("15_tk1nx")
animation_player = NodePath("../../../../AnimationPlayer")
animation_name = &"animal/idle"

[node name="ToRun" type="Node" parent="StateChart/ParallelState/Animation/IdleAnim"]
script = ExtResource("14_bt12d")
to = NodePath("../../RunAnim")
event = &"velocity_update"
guard = ExtResource("16_wri75")

[node name="ToRun2" type="Node" parent="StateChart/ParallelState/Animation/IdleAnim"]
script = ExtResource("14_bt12d")
to = NodePath("../../RunAnim")
event = &"is_moving"

[node name="RunAnim" type="Node" parent="StateChart/ParallelState/Animation"]
script = ExtResource("15_tk1nx")
animation_player = NodePath("../../../../AnimationPlayer")
animation_name = &"animal/run"

[node name="ToIdle" type="Node" parent="StateChart/ParallelState/Animation/RunAnim"]
script = ExtResource("14_bt12d")
to = NodePath("../../IdleAnim")
event = &"velocity_update"
guard = SubResource("Resource_83iit")

[node name="ToIdle2" type="Node" parent="StateChart/ParallelState/Animation/RunAnim"]
script = ExtResource("14_bt12d")
to = NodePath("../../IdleAnim")
event = &"stopped"

[node name="AttackAnim" type="Node" parent="StateChart/ParallelState/Animation"]
script = ExtResource("15_tk1nx")
animation_player = NodePath("../../../../AnimationPlayer")
animation_name = &"animal/eat"

[node name="ToIdle" type="Node" parent="StateChart/ParallelState/Animation/AttackAnim"]
script = ExtResource("14_bt12d")
to = NodePath("../../IdleAnim")
delay_seconds = 3.0

[node name="DeathAnim" type="Node" parent="StateChart/ParallelState/Animation"]
script = ExtResource("15_tk1nx")
animation_player = NodePath("../../../../AnimationPlayer")
animation_name = &"animal/die"

[node name="Behavior" type="Node" parent="StateChart/ParallelState"]
script = ExtResource("13_wg3vd")
initial_state = NodePath("Idle")

[node name="ToDeath" type="Node" parent="StateChart/ParallelState/Behavior"]
script = ExtResource("14_bt12d")
to = NodePath("../Death")
event = &"death"

[node name="ToControlled" type="Node" parent="StateChart/ParallelState/Behavior"]
script = ExtResource("14_bt12d")
to = NodePath("../Controlled")
event = &"posess"

[node name="Controlled" type="Node" parent="StateChart/ParallelState/Behavior"]
script = ExtResource("18_p0wjb")

[node name="Transition" type="Node" parent="StateChart/ParallelState/Behavior/Controlled"]
script = ExtResource("14_bt12d")
to = NodePath("../../Idle")
event = &"unposess"

[node name="Idle" type="Node" parent="StateChart/ParallelState/Behavior"]
script = ExtResource("18_p0wjb")

[node name="ToFleePredators" type="Node" parent="StateChart/ParallelState/Behavior/Idle"]
script = ExtResource("14_bt12d")
to = NodePath("../../RunPattern/FleePredators")
guard = SubResource("Resource_u87sq")
delay_seconds = 3.0

[node name="PredatorSensed" type="Node" parent="StateChart/ParallelState/Behavior/Idle"]
script = ExtResource("14_bt12d")
to = NodePath("../../RunPattern/FleePredators")
event = &"predator_sensed"

[node name="ToChase" type="Node" parent="StateChart/ParallelState/Behavior/Idle"]
script = ExtResource("14_bt12d")
to = NodePath("../../RunPattern/Chase")
event = &"chase"
delay_seconds = 1.0

[node name="ToFollow" type="Node" parent="StateChart/ParallelState/Behavior/Idle"]
script = ExtResource("14_bt12d")
to = NodePath("../../RunPattern/Follow")
event = &"follow"
delay_seconds = 1.0

[node name="ToRunHistory" type="Node" parent="StateChart/ParallelState/Behavior/Idle"]
script = ExtResource("14_bt12d")
to = NodePath("../../RunPattern/RunHistoryState")
delay_seconds = 3.0

[node name="ToRoam" type="Node" parent="StateChart/ParallelState/Behavior/Idle"]
script = ExtResource("14_bt12d")
to = NodePath("../../RunPattern/Roam")
delay_seconds = 3.0

[node name="RunPattern" type="Node" parent="StateChart/ParallelState/Behavior"]
script = ExtResource("13_wg3vd")
initial_state = NodePath("Roam")

[node name="RunHistoryState" type="Node" parent="StateChart/ParallelState/Behavior/RunPattern"]
script = ExtResource("20_x62iw")
default_state = NodePath("../Roam")

[node name="PredatorSensed" type="Node" parent="StateChart/ParallelState/Behavior/RunPattern"]
script = ExtResource("14_bt12d")
to = NodePath("../FleePredators")
event = &"predator_sensed"

[node name="Roam" type="Node" parent="StateChart/ParallelState/Behavior/RunPattern"]
script = ExtResource("18_p0wjb")

[node name="ToChase" type="Node" parent="StateChart/ParallelState/Behavior/RunPattern/Roam"]
script = ExtResource("14_bt12d")
to = NodePath("../../Chase")
event = &"chase"
delay_seconds = 1.0

[node name="LeaderAssigned" type="Node" parent="StateChart/ParallelState/Behavior/RunPattern/Roam"]
script = ExtResource("14_bt12d")
to = NodePath("../../Follow")
event = &"leader_assigned"

[node name="ToIdleCancel" type="Node" parent="StateChart/ParallelState/Behavior/RunPattern/Roam"]
script = ExtResource("14_bt12d")
to = NodePath("../../../Idle")
event = &"cancel_seek"

[node name="ToIdle" type="Node" parent="StateChart/ParallelState/Behavior/RunPattern/Roam"]
script = ExtResource("14_bt12d")
to = NodePath("../../../Idle")
event = &"target_reached"

[node name="TargetLost" type="Node" parent="StateChart/ParallelState/Behavior/RunPattern"]
script = ExtResource("14_bt12d")
to = NodePath("../../Idle")
event = &"target_lost"

[node name="Follow" type="Node" parent="StateChart/ParallelState/Behavior/RunPattern"]
script = ExtResource("18_p0wjb")

[node name="FleePredators" type="Node" parent="StateChart/ParallelState/Behavior/RunPattern"]
script = ExtResource("18_p0wjb")

[node name="IsSafe" type="Node" parent="StateChart/ParallelState/Behavior/RunPattern/FleePredators"]
script = ExtResource("14_bt12d")
to = NodePath("../../../Idle")
event = &"predator_lost"
guard = ExtResource("19_u70r5")

[node name="ToIdle" type="Node" parent="StateChart/ParallelState/Behavior/RunPattern/FleePredators"]
editor_description = "this transition shouldn't be necessary, but opposite when cornered gets the prey reaching the nav end constantly. If that is fixed, we can remove this transition."
script = ExtResource("14_bt12d")
to = NodePath("../../../Idle")
event = &"target_reached"

[node name="Chase" type="Node" parent="StateChart/ParallelState/Behavior/RunPattern"]
script = ExtResource("18_p0wjb")

[node name="ChaseReached" type="Node" parent="StateChart/ParallelState/Behavior/RunPattern/Chase"]
script = ExtResource("14_bt12d")
to = NodePath("../../Eat")
event = &"chase_reached"

[node name="ChaseAborted" type="Node" parent="StateChart/ParallelState/Behavior/RunPattern/Chase"]
script = ExtResource("14_bt12d")
to = NodePath("../../Roam")
event = &"chase_aborted"

[node name="Eat" type="Node" parent="StateChart/ParallelState/Behavior/RunPattern"]
script = ExtResource("18_p0wjb")

[node name="FinishedEating" type="Node" parent="StateChart/ParallelState/Behavior/RunPattern/Eat"]
script = ExtResource("14_bt12d")
to = NodePath("../../Roam")
delay_seconds = 3.0

[node name="Death" type="Node" parent="StateChart/ParallelState/Behavior"]
script = ExtResource("18_p0wjb")

[connection signal="body_entered" from="SensoryRadius" to="." method="_on_sensory_radius_body_entered"]
[connection signal="body_exited" from="SensoryRadius" to="." method="_on_sensory_radius_body_exited"]
[connection signal="navigation_finished" from="NavigationAgent2D" to="Movement" method="_on_navigation_finished"]
[connection signal="velocity_computed" from="NavigationAgent2D" to="." method="_on_navigation_agent_2d_velocity_computed"]
[connection signal="velocity_computed" from="NavigationAgent2D" to="Movement" method="_on_navigation_agent_2d_velocity_computed"]
[connection signal="state_physics_processing" from="StateChart/ParallelState/Animation/IdleAnim" to="." method="_on_idle_anim_state_physics_processing"]
[connection signal="state_physics_processing" from="StateChart/ParallelState/Animation/RunAnim" to="." method="_on_run_anim_state_physics_processing"]
[connection signal="state_entered" from="StateChart/ParallelState/Behavior/Idle" to="." method="_on_idle_state_entered"]
[connection signal="state_entered" from="StateChart/ParallelState/Behavior/Idle" to="Movement" method="_on_idle_state_entered"]
[connection signal="state_entered" from="StateChart/ParallelState/Behavior/RunPattern/Roam" to="Movement" method="_on_roam_state_entered"]
[connection signal="state_physics_processing" from="StateChart/ParallelState/Behavior/RunPattern/Roam" to="Movement" method="_on_roam_state_physics_processing"]
[connection signal="state_entered" from="StateChart/ParallelState/Behavior/RunPattern/FleePredators" to="Movement" method="_on_flee_predators_state_entered"]
[connection signal="state_physics_processing" from="StateChart/ParallelState/Behavior/RunPattern/FleePredators" to="Movement" method="_on_flee_predators_state_physics_processing"]
[connection signal="state_entered" from="StateChart/ParallelState/Behavior/RunPattern/Chase" to="." method="_on_chase_state_entered"]
[connection signal="state_entered" from="StateChart/ParallelState/Behavior/RunPattern/Chase" to="Movement" method="_on_chase_state_entered"]
[connection signal="state_exited" from="StateChart/ParallelState/Behavior/RunPattern/Chase" to="." method="_on_chase_state_exited"]
[connection signal="state_physics_processing" from="StateChart/ParallelState/Behavior/RunPattern/Chase" to="Movement" method="_on_chase_state_physics_processing"]
[connection signal="state_processing" from="StateChart/ParallelState/Behavior/RunPattern/Chase" to="Movement" method="_on_chase_state_processing"]
[connection signal="state_entered" from="StateChart/ParallelState/Behavior/RunPattern/Eat" to="Movement" method="_on_eat_state_entered"]
[connection signal="state_exited" from="StateChart/ParallelState/Behavior/RunPattern/Eat" to="." method="_on_eat_state_exited"]
[connection signal="state_entered" from="StateChart/ParallelState/Behavior/Death" to="Movement" method="_on_death_state_entered"]
